TRDR-1 fix authentication
