# app/Http/Controllers/API/BoardController.php
@@ -7,11 +7,7 @@ use App\Http\Requests\StatusRequest;
 use Illuminate\Auth\Access\AuthorizationException;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
-use App\Http\Controllers\API\BaseController as BaseController;
 use App\Board;
-use App\User;
-use App\Status;
-use App\Role;
 use Validator;
 use \Illuminate\Http\Response;
 use App\Services\BoardService;
@@ -28,50 +24,50 @@ class BoardController extends BaseController
      * @OA\Get(
      *     path="api/v1/boards",
      *     @OA\Parameter(
-     *     name="Bearer Token",
-     *     in="header",
-     *     required=true,
-     *     @OA\Schema(type="int")
+     *         name="Bearer Token",
+     *         in="header",
+     *         required=true,
+     *         @OA\Schema(type="int")
      *     ),
-     *     summary="Displays a listing of user's boards.",
+     *     summary="Displays a listing of user's boards",
      *     @OA\Response(response="200", description="List of user's boards.")
-     *
      * )
      */
 
     public function index() {
-        return auth()->user()->boards->all();
+        return $this->boardService->getBoards(auth()->user());
     }
 
     /**
      * @OA\Post(
      *     path="api/v1/boards",
-     *     summary="Add new user board.",
+     *     summary="Add new user board",
      *     @OA\Parameter(
-     *     name="name",
-     *     in="query",
-     *     required=true,
-     *     description="name of the new board",
-     *     @OA\Schema(type="string")
+     *         name="name",
+     *         in="query",
+     *         required=true,
+     *         description="name of the new board",
+     *         @OA\Schema(type="string")
      *     ),
      *     @OA\Parameter(
-     *     name="Bearer Token",
-     *     in="header",
-     *     required=true,
-     *     @OA\Schema(type="string")
+     *         name="Bearer Token",
+     *         in="header",
+     *         required=true,
+     *         @OA\Schema(type="string")
      *     ),
-     *     @OA\Response(response="200", description="Create board successfully"),
-     *     @OA\Response(response="404", description="Validation error")
-     *
+     *     @OA\Response(response="201", description="Create board successfully"),
+     *     @OA\Response(response="404", description="Validation error"),
+     *     @OA\Response(response="404", description="Board not addes")
      * )
      * @param BoardRequest $request
-     * @return Response
+     * @return JsonResponse
      */
 
-    public function store(BoardRequest $request) {
+    public function store(BoardRequest $request): JsonResponse
+    {
         $board = $this->boardService->createBoard($request, auth()->user());
         if ($board) {
-            return $this->sendResponse($board->toArray(), 'Board created successfully');
+            return $this->sendSuccess($board->toArray(), 'Board created successfully', 201);
         }
         else {
             return $this->sendError('Board not added', 500);
@@ -81,24 +77,24 @@ class BoardController extends BaseController
     /**
      * @OA\Put(
      *     path="api/v1/boards/{boardId}",
-     *     summary="Update user board.",
+     *     summary="Update user board",
      *     @OA\Parameter(
-     *      name="boardId",
-     *      in="path",
-     *      description="board id",
-     *      @OA\Schema(type="string")
+     *         name="boardId",
+     *         in="path",
+     *         description="board id",
+     *         @OA\Schema(type="string")
      *     ),
      *     @OA\Parameter(
-     *      name="name",
-     *      in="query",
-     *      description="new name of the board",
-     *      @OA\Schema(type="string")
+     *         name="name",
+     *         in="query",
+     *         description="new name of the board",
+     *         @OA\Schema(type="string")
      *     ),
      *     @OA\Parameter(
-     *     name="Bearer Token",
-     *     in="header",
-     *     required=true,
-     *     @OA\Schema(type="string")
+     *         name="Bearer Token",
+     *         in="header",
+     *         required=true,
+     *         @OA\Schema(type="string")
      *     ),
      *     @OA\Response(response="400", description="Board not found"),
      *     @OA\Response(response="200", description="Board updated successfully"),
@@ -114,38 +110,32 @@ class BoardController extends BaseController
 
     public function update(BoardRequest $request, Board $board) {
         $this->authorize('update', $board);
-        $board->fill($request->all());
-        if ($board->save()) {
-            return $this->sendResponse($board->toArray(), 'Board updated successfully');
-        }
-        else {
-            return $this->sendError('Board not updated', 500);
-        }
+        return $this->boardService->updateBoard($board, $request->all());
     }
 
     /**
      * @OA\Post(
-     *     path="api/v1/boards/{boardId}/add-user",
-     *     summary="Add user to board.",
+     *     path="api/v1/boards/{boardId}/user",
+     *     summary="Add user to board",
      *     @OA\Parameter(
-     *     name="boardId",
-     *     in="path",
-     *     required=true,
-     *     description="board id",
-     *     @OA\Schema(type="string")
+     *         name="boardId",
+     *         in="path",
+     *         required=true,
+     *         description="board id",
+     *         @OA\Schema(type="string")
      *     ),
      *     @OA\Parameter(
-     *     name="userId",
-     *     in="path",
-     *     required=true,
-     *     description="user id",
-     *     @OA\Schema(type="string")
+     *         name="userId",
+     *         in="path",
+     *         required=true,
+     *         description="user id",
+     *         @OA\Schema(type="string")
      *     ),
      *     @OA\Parameter(
-     *     name="Bearer Token",
-     *     in="header",
-     *     required=true,
-     *     @OA\Schema(type="string")
+     *         name="Bearer Token",
+     *         in="header",
+     *         required=true,
+     *         @OA\Schema(type="string")
      *     ),
      *     @OA\Response(response="400", description="Board or user not found"),
      *     @OA\Response(response="200", description="User added to the board successfully"),
@@ -167,34 +157,33 @@ class BoardController extends BaseController
 
     /**
      * @OA\Post(
-     *     path="api/v1/boards/{board}/add-status",
-     *     summary="Add status to board.",
+     *     path="api/v1/boards/{boardId}/status",
+     *     summary="Add status to board",
      *     @OA\Parameter(
-     *     name="board",
-     *     in="path",
-     *     required=true,
-     *     description="board id",
-     *     @OA\Schema(type="string")
+     *         name="board",
+     *         in="path",
+     *         required=true,
+     *         description="board id",
+     *         @OA\Schema(type="string")
      *     ),
      *     @OA\Parameter(
-     *     name="status",
-     *     in="path",
-     *     required=true,
-     *     description="name of status",
-     *     @OA\Schema(type="string")
+     *         name="status",
+     *         in="path",
+     *         required=true,
+     *         description="name of status",
+     *         @OA\Schema(type="string")
      *     ),
      *     @OA\Parameter(
-     *     name="Bearer Token",
-     *     in="header",
-     *     required=true,
-     *     @OA\Schema(type="int")
+     *         name="Bearer Token",
+     *         in="header",
+     *         required=true,
+     *         @OA\Schema(type="int")
      *     ),
      *     @OA\Response(response="400", description="Board not found"),
      *     @OA\Response(response="409", description="Status is already exist"),
      *     @OA\Response(response="200", description="Status added to the board successfully"),
      *     @OA\Response(response="403", description="User have hot permission to add status to this board"),
      *     @OA\Response(response="404", description="Validation error")
-     *
      * )
      * @param StatusRequest $request
      * @param $board
@@ -210,27 +199,27 @@ class BoardController extends BaseController
 
     /**
      * @OA\Delete(
-     *     path="api/v1/boards/{boardId}/delete-status",
-     *     summary="Delete status from user's board.",
+     *     path="api/v1/boards/{boardId}/status",
+     *     summary="Delete status from user's board",
      *     @OA\Parameter(
-     *     name="boardId",
-     *     in="path",
-     *     required=true,
-     *     description="board id",
-     *     @OA\Schema(type="string")
+     *         name="boardId",
+     *         in="path",
+     *         required=true,
+     *         description="board id",
+     *         @OA\Schema(type="string")
      *     ),
      *     @OA\Parameter(
-     *     name="status",
-     *     in="query",
-     *     required=true,
-     *     description="name of status",
-     *     @OA\Schema(type="string")
+     *         name="status",
+     *         in="query",
+     *         required=true,
+     *         description="name of status",
+     *         @OA\Schema(type="string")
      *     ),
      *     @OA\Parameter(
-     *     name="Bearer Token",
-     *     in="header",
-     *     required=true,
-     *     @OA\Schema(type="string")
+     *         name="Bearer Token",
+     *         in="header",
+     *         required=true,
+     *         @OA\Schema(type="string")
      *     ),
      *     @OA\Response(response="400", description="Board or status not found"),
      *     @OA\Response(response="409", description="Status cannot be deleted because there are tasks that have it"),
@@ -253,19 +242,19 @@ class BoardController extends BaseController
     /**
      * @OA\Delete(
      *     path="api/v1/boards/{boardId}",
-     *     summary="Delete user's board.",
+     *     summary="Delete user's board",
      *     @OA\Parameter(
-     *     name="boardId",
-     *     in="path",
-     *     required=true,
-     *     description="board id",
-     *     @OA\Schema(type="string")
+     *         name="boardId",
+     *         in="path",
+     *         required=true,
+     *         description="board id",
+     *         @OA\Schema(type="string")
      *     ),
      *     @OA\Parameter(
-     *     name="Bearer Token",
-     *     in="header",
-     *     required=true,
-     *     @OA\Schema(type="string")
+     *         name="Bearer Token",
+     *         in="header",
+     *         required=true,
+     *         @OA\Schema(type="string")
      *     ),
      *     @OA\Response(response="400", description="Board not found"),
      *     @OA\Response(response="200", description="Board deleted successfully"),
@@ -277,26 +266,25 @@ class BoardController extends BaseController
 
     public function destroy(Board $board) {
         $this->authorize('delete', $board);
-        $board->delete();
-        return response()->json(['success' => true]);
+        return $this->deleteBoard($board);
     }
 
     /**
      * @OA\Delete(
-     *     path="api/v1/boards/{boardId}/delete-user",
-     *     summary="Exit from board.",
+     *     path="api/v1/boards/{boardId}/user",
+     *     summary="Exit from board",
      *     @OA\Parameter(
-     *     name="boardId",
-     *     in="path",
-     *     required=true,
-     *     description="board id",
-     *     @OA\Schema(type="string")
+     *         name="boardId",
+     *         in="path",
+     *         required=true,
+     *         description="board id",
+     *         @OA\Schema(type="string")
      *     ),
      *     @OA\Parameter(
-     *     name="Bearer Token",
-     *     in="header",
-     *     required=true,
-     *     @OA\Schema(type="string")
+     *         name="Bearer Token",
+     *         in="header",
+     *         required=true,
+     *         @OA\Schema(type="string")
      *     ),
      *     @OA\Response(response="400", description="Board not found"),
      *     @OA\Response(response="500", description="Board not deleted"),
@@ -307,10 +295,6 @@ class BoardController extends BaseController
 
     public function deleteUser(Board $board) {
         $this->authorize('deleteUser', $board);
-        if (auth()->user()->boards()->detach($board)) {
-            return response()->json(['success' => true], 200);
-        } else {
-            return $this->sendError('Board not deleted', 500);
-        }
+        return $this->boardService->deleteUser(auth()->user(), $board);
     }
 }
